load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "github.com/margic/bazel-s3-cache",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/margic/bazel-s3-cache",
    visibility = ["//visibility:private"],
    deps = [
        "//api:go_default_library",
        "//s3store:go_default_library",
        "//vendor/github.com/spf13/pflag:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)

go_binary(
    name = "project",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "bazel-cache-image",
    binary = ":project",
    importpath = "github.com/margic/bazel-s3-cache",
)
